# wlmaker

./: .gitignore  CMakeLists.txt
.github/workflows/: build_and_upload_artifact.yml
protocols/: CMakeLists.txt  wlm-input-activity-v1.xml  wlmaker-input-activity-unstable-v1.xml
src/: CMakeLists.txt  activity.c  activity.h  input_activity.c  input_activity.h  server.c  server.h  wlmaker.desktop
